tests/snapshots/tui_remote_test__detail_visible.snap
---
source: tests/tui_remote_test.rs
expression: "(vm.detail.is_visible, vm.detail.view_mode)"
---
(
    true,
    Local,
)
