tests/snapshots/tui_remote_test__error_modal.snap
---
source: tests/tui_remote_test.rs
expression: "(vm.modal.show_error, vm.modal.error.is_some())"
---
(
    true,
    true,
)
