tests/snapshots/tui_remote_test__extend_selection.snap
---
source: tests/tui_remote_test.rs
expression: "(state.local_selected_index, state.local_selected_ids.len(),)"
---
(
    2,
    3,
)
