tests/snapshots/tui_remote_test__help_modal.snap
---
source: tests/tui_remote_test.rs
expression: "(vm.modal.show_help, vm.modal.show_filter)"
---
(
    true,
    false,
)
