tests/snapshots/tui_remote_test__link_mode.snap
---
source: tests/tui_remote_test.rs
expression: "(vm.modal.link_mode_active,\nvm.modal.link_mode_state.as_ref().map(|s| &s.source_id),)"
---
(
    true,
    Some(
        "j-1",
    ),
)
