tests/snapshots/tui_remote_test__nav_local_down_5.snap
---
source: tests/tui_remote_test.rs
expression: "(state.local_selected_index, state.local_scroll_offset)"
---
(
    5,
    0,
)
