tests/snapshots/tui_remote_test__page_up.snap
---
source: tests/tui_remote_test.rs
expression: "(initial_idx, state.local_selected_index)"
---
(
    49,
    39,
)
