tests/snapshots/tui_remote_test__remote_empty_view.snap
---
source: tests/tui_remote_test.rs
expression: "(vm.local_list.tickets.len(), vm.remote_list.issues.len(),\nvm.local_list.is_focused, vm.is_loading,)"
---
(
    0,
    0,
    true,
    false,
)
